[gd_scene load_steps=5 format=3 uid="uid://c4vi7iyeaccik"]

[ext_resource type="Texture2D" uid="uid://dgeu7gnwdrdmq" path="res://assets/NotebookPlusSettingsBackdrop.svg" id="1_83qjl"]
[ext_resource type="Script" uid="uid://c3vd17gypdrw7" path="res://menus/settings_menu.gd" id="1_v0bl3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_83qjl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v0bl3"]

[node name="SettingsMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_83qjl")
script = ExtResource("1_v0bl3")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_83qjl")
patch_margin_left = 95
patch_margin_top = 95
patch_margin_right = 290
patch_margin_bottom = 290

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/TitleHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_font_sizes/font_size = 48
text = "Exit"

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/TitleHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/TitleHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UIScaleHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="UIScaleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/UIScaleHBox"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "UI Scale: "

[node name="UIScaleOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/UIScaleHBox"]
layout_mode = 2
selected = 2
item_count = 8
popup/item_0/text = "75%"
popup/item_0/id = 1
popup/item_1/text = "90%"
popup/item_1/id = 2
popup/item_2/text = "100%"
popup/item_2/id = 0
popup/item_3/text = "110%"
popup/item_3/id = 3
popup/item_4/text = "125%"
popup/item_4/id = 4
popup/item_5/text = "150%"
popup/item_5/id = 5
popup/item_6/text = "200%"
popup/item_6/id = 6
popup/item_7/text = "250%"
popup/item_7/id = 7

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CachingTileSizeHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="CachingTileSizeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CachingTileSizeHBox"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Caching Tile Size: "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CachingTileSizeHBox"]
layout_mode = 2
selected = 2
item_count = 5
popup/item_0/text = "128x128"
popup/item_0/id = 0
popup/item_1/text = "256x256"
popup/item_1/id = 1
popup/item_2/text = "512x512"
popup/item_2/id = 2
popup/item_3/text = "1024x1024"
popup/item_3/id = 3
popup/item_4/text = "2048x2048"
popup/item_4/id = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_v0bl3")
text = "Show caching tile lines?"
alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/TitleHBox/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/UIScaleHBox/UIScaleOptionButton" to="." method="_on_ui_scale_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CachingTileSizeHBox/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
